--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[test]]
+name = "should_panic"
+harness = false
+
 [profile.dev]
 #panic = "abort" # Not needed because of x86_64-blog_os. If enabled, this entry will result in a duplicated lang key error. See issue 7359
 
