--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,10 @@ edition = "2018"
 name = "should_panic"
 harness = false
 
+[[test]]
+name = "stack_overflow"
+harness = false
+
 [profile.dev]
 #panic = "abort" # Not needed because of x86_64-blog_os. If enabled, this entry will result in a duplicated lang key error. See issue 7359
 
