--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,10 @@ harness = false
 [dependencies]
 bootloader = "0.9.8"
 volatile = "0.2.6"
-spin = "0.5.2"
+spin = "0.5.2" #Spin lock
 x86_64 = "0.14.4" #IO-Port
 uart_16550 = "0.2.0" #Reporting test result via serial interface
+pic8259 = "0.10.2" #Support for the Programmable interrupt controller
 
 [dependencies.lazy_static]
 version = "1.0"
