--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ harness = false
 #panic = "abort"
 
 [dependencies]
-bootloader = "0.9.8"
+bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
 volatile = "0.2.6"
 spin = "0.5.2" #Spin lock
 x86_64 = "0.14.4" #IO-Port
