--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ x86_64 = "0.14.4" #IO-Port
 uart_16550 = "0.2.0" #Reporting test result via serial interface
 pic8259 = "0.10.2" #Support for the Programmable interrupt controller
 pc-keyboard = "0.5.1" #Support for PS2 scancodes
+linked_list_allocator = "0.9.0" #For our first allocator
 
 [dependencies.lazy_static]
 version = "1.0"
